syntax = "proto3";

package story;

service StoryGenerator {
  rpc GenerateStory (StoryRequest) returns (StoryResponse) {}
}

message StoryRequest {
  string prompt = 1;
}

message StoryResponse {
  string story = 1;
}
